--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -3,7 +3,7 @@ name: Deploy CRUD Application to AWS
 on:
   push:
     branches:
-      - main
+      - main  # Trigger deployment when pushing to the main branch
 
 jobs:
   deploy:
@@ -14,7 +14,7 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v2
 
-      # Set up AWS credentials (you should add these as GitHub secrets)
+      # Set up AWS credentials (ensure you have AWS_ACCESS_KEY_ID and AWS_SECRET_ACCESS_KEY in your GitHub secrets)
       - name: Set up AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
@@ -28,7 +28,10 @@ jobs:
           aws cloudformation deploy \
             --template-file cloudformation.yaml \
             --stack-name crud-stack \
-            --capabilities CAPABILITY_IAM
+            --capabilities CAPABILITY_IAM \
+            --parameter-overrides \
+              LambdaS3Bucket=${{ secrets.LAMBDA_S3_BUCKET }} \
+              LambdaS3Key=${{ secrets.LAMBDA_S3_KEY }}
 
       # Optionally, you can output the API URL for confirmation
       - name: Get API URL
